(data_only_dirs mmalloc)
(library
 (name ancient)
 (modules ancient)
 (foreign_stubs (language c) (names ancient_c)(flags -Immalloc))
 (foreign_archives mmalloc)
 (libraries unix))

(rule
; (deps (source_tree mmalloc))
 (target libmmalloc.a)
 (action (progn
          (chdir %{workspace_root}/mmalloc (run sh ./configure))
          (chdir %{workspace_root}/mmalloc (run make))
          (chdir %{workspace_root}/mmalloc
            (run cp libmmalloc.a ../libmmalloc.a)))))
            
(executable
 (name test_ancient_dict_write)
 (modules test_ancient_dict_write)
 (libraries unix ancient))
 
(executable
 (name test_ancient_dict_verify)
 (modules test_ancient_dict_verify)
 (libraries unix ancient))
 
(executable
 (name test_ancient_dict_read)
 (modules test_ancient_dict_read)
 (libraries unix ancient))